1. Build and run in temp dir. 2. Use log4js for logging.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "3.4.0",
     "jade": "*",
-    "temp": "*"
+    "log4js":"*",
+    "temp": "*",
+    "rimraf": "*"
   }
 }
