--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "express": "3.4.0",
     "jade": "*",
-    "log4js":"*",
+    "winston":"*",
     "temp": "*",
     "rimraf": "*"
   }
